--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "spiralloop": "^1.0.2",
+    "tumult": "^3.0.14",
     "uint4": "^0.1.2",
     "vec3": "^0.1.3"
   },
