--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "localforage": "^1.7.3",
     "minecraft-data": "^2.39.0",
     "minecraft-protocol": "^1.9.3",
+    "noisejs": "^2.1.0",
     "prismarine-chunk": "^1.11.0",
+    "prismarine-item": "^1.1.0",
     "prismarine-nbt": "^1.2.1",
+    "prismarine-windows": "^1.1.0",
     "random-seed": "^0.3.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
