--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "socket.io-client": "^2.2.0",
     "spiralloop": "^1.0.2",
     "uint4": "^0.1.2",
+    "uuid": "^3.3.2",
     "vec3": "^0.1.3"
   },
   "scripts": {
